--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-loadable": "^5.5.6",
+    "@types/react-select": "^5.0.1",
     "ahooks": "^3.3.10",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
@@ -26,6 +27,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.5.7",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
